# Napari_Simple_Tracker

./: .gitignore  README.md  pyproject.toml
docs/: USAGE.md  USAGE_FRAP.md  USAGE_SIMPLE_TRACKER.md
src/Napari_Simple_Tracker/: _core.py  _dock.py  napari.yaml
src/napari_roi_tracker/: __init__.py  _core.py  _dock.py  _state.py  _widgets.py  napari.yaml
src/napari_roi_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/napari_simple_tracker/: __init__.py  _dock.py  napari.yaml
