[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-roi-tracker"
version = "0.1.0"
description = "napari plugin for multi-track ROI FRAP analysis with double normalization"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Hirota Aoyagi" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: napari",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "magicgui>=0.8",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "pandas>=2.0",
  "qtpy>=2.4",
  "scikit-image>=0.22",
]


[project.entry-points."napari.manifest"]
napari-roi-tracker = "napari_roi_tracker:napari.yaml"

[project.urls]
Homepage = "https://github.com/your-username/napari-roi-tracker"
Repository = "https://github.com/your-username/napari-roi-tracker"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
napari_roi_tracker = ["napari.yaml"]
