[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-simple-tracker"
version = "1.1.1"
description = "napari plugin for ROI tracking and FRAP analysis in time-lapse images"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT" 
authors = [
  { name = "Hirota Aoyagi" }
]
keywords = ["napari", "roi", "tracker", "frap", "microscopy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: napari",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "magicgui>=0.8",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "pandas>=2.0",
  "qtpy>=2.4",
  "scikit-image>=0.25",
]


[project.entry-points."napari.manifest"]
napari-simple-tracker = "napari_simple_tracker:napari.yaml"

[project.urls]
Homepage = "https://github.com/Aohirovet/Napari_Simple_Tracker"
Repository = "https://github.com/Aohirovet/Napari_Simple_Tracker"
Issues = "https://github.com/Aohirovet/Napari_Simple_Tracker/issues"
Documentation = "https://github.com/Aohirovet/Napari_Simple_Tracker/blob/main/docs/USAGE.md"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
napari_simple_tracker = ["napari.yaml"]
